--- a/forth.html
+++ b/forth.html
@@ -9,6 +9,10 @@
 <body>
     <h1> this is forth repo</h1>
     <h1>trying brach</h1>
+    <div>
+        <h3> new blog</h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum excepturi officia eum eos eligendi impedit, dignissimos ut, facilis qui necessitatibus debitis nulla labore laudantium tempore, tempora at voluptatum. Itaque, autem.</p>
+    </div>
     <img src="AKDM1543.JPG" alt=""   > 
 </body>
 </html>
